plugins {
    id 'java'
    id 'application'
}

group 'org.radarcns'
version '0.3'

targetCompatibility = '1.8'
sourceCompatibility = '1.8'

ext.grizzly = '2.4.3'
ext.jersey = '2.27'
ext.junitVersion = '4.12'
ext.hamcrestVersion = '1.3'
ext.logback = '1.2.2'
ext.mongodb = '3.6.0'
ext.radarCommons = '0.7'
ext.swagger = '2.0.0-rc4'
ext.tomcat = '8.0.47'
ext.radarAuthVersion = '0.5.0'
ext.wireMockVersion = '2.5.1'
ext.jacksonVersion = '2.9.3'
ext.mockitoVersion = '2.2.29'

ext.slf4jVersion = '1.7.25'
ext.findbugsVersion = '3.0.2'

configurations {
    provided
    compile.extendsFrom provided
}

repositories {
    jcenter()
    // Non-jcenter radar releases
    maven { url 'https://dl.bintray.com/radar-cns/org.radarcns' }
    // For working with dev-branches
    maven { url 'https://oss.jfrog.org/artifactory/libs-snapshot/' }
    // Github code
    maven { url 'https://jitpack.io' }
}

dependencies {
    // TODO: Reduce dependencies to the minimum
    compile group: 'org.glassfish.grizzly', name: 'grizzly-http-server', version: grizzly

    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-http', version: jersey
    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-grizzly2-servlet', version: jersey
    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: jersey
    compile group: 'org.mongodb', name: 'mongo-java-driver', version: mongodb

    // TODO: Add back swagger support
    compile group: 'io.swagger.core.v3', name: 'swagger-jaxrs2', version: swagger

    compile group: 'org.radarcns', name: 'radar-commons', version: radarCommons

    compile group: 'org.radarcns', name: 'oauth-client-util', version: radarAuthVersion
    compile group: 'org.radarcns', name: 'radar-auth', version: radarAuthVersion
    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: jacksonVersion
    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version:
            jacksonVersion
    compile group: 'com.google.code.findbugs', name: 'jsr305', version: findbugsVersion

    runtimeOnly group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: jersey

    runtimeOnly group: 'ch.qos.logback', name:'logback-core', version: logback
    runtimeOnly group: 'ch.qos.logback', name:'logback-classic', version: logback
}

mainClassName = 'org.radarcns.webapp.GrizzlyServer'

if (!hasProperty('profile')) {
    ext.profile = 'dev'
}

apply from: "gradle/profile.${profile}.gradle"


wrapper {
    gradleVersion '4.9'
}